objects/Account/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Active</fullName>
            </value>
            <value>
                <fullName>QC-APPROVED</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Failed QC</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>