objects/Account/fields/Nominal_Code__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Code__c</fullName>
    <label>Nominal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>