objects/Account/fields/Number_of_surgeries__c.field-meta.xml
<CustomField>
    <fullName>Number_of_surgeries__c</fullName>
    <label>Number of Surgeries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>