objects/Account/fields/Offshore__c.field-meta.xml
<CustomField>
    <fullName>Offshore__c</fullName>
    <label>Offshore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>