objects/Account/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <label>Other Description</label>
    <type>TextArea</type>
</CustomField>