objects/Account/fields/Parent_Account_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Terms_and_Conditions__c</fullName>
    <label>Customer Account Terms and Conditions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>