objects/Account/fields/Parent_Book__c.field-meta.xml
<CustomField>
    <fullName>Parent_Book__c</fullName>
    <formula>Parent.Price_Book__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Book</label>
    <type>Text</type>
</CustomField>