objects/Account/fields/Parent_Invoice_Email_To_formula__c.field-meta.xml
<CustomField>
    <fullName>Parent_Invoice_Email_To_formula__c</fullName>
    <label>Customer Invoice Email To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>