objects/Account/fields/Parent_Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Price_Book_ID__c</fullName>
    <formula>Parent.Price_Book_Indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates that there is a price book indicator at the master level for this customer, which indicates the default price book for this site. This can be over-ridden at the site level if the Price Book ID field is populated.</inlineHelpText>
    <label>Customer Price Book ID</label>
    <type>Text</type>
</CustomField>