objects/Account/fields/Parent_Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Purchase_Order_No__c</fullName>
    <formula>Parent.Current_Purchase_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates that there is one over-riding purchase order to be used for this customer and all their sites. if there is a site specific purchase order number this will be ignored.</inlineHelpText>
    <label>Customer Purchase Order No.</label>
    <type>Text</type>
</CustomField>