objects/Account/fields/Parent_SAGE_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_SAGE_ID__c</fullName>
    <formula>SAGE_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates that there is one main Sage Code and that this is the default for all sites on this customer</inlineHelpText>
    <label>Customer SAGE Code</label>
    <type>Text</type>
</CustomField>