objects/Account/fields/Parent_Special_Engineer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Parent_Special_Engineer_Instructions__c</fullName>
    <formula>Parent.Special_Engineer_Instructions__c &amp; BR () &amp;
 Parent.Additional_Instructions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates that there are special instructions for this customer that apply to all sites in the group. This appears in the Message section on the Visit.</inlineHelpText>
    <label>Customer Special Technician Instructions</label>
    <type>Text</type>
</CustomField>