objects/Account/fields/Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Status__c</fullName>
    <label>Overall Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>