objects/Account/fields/Parking_Information__c.field-meta.xml
<CustomField>
    <fullName>Parking_Information__c</fullName>
    <label>Parking Information</label>
    <length>200</length>
    <type>Text</type>
</CustomField>