objects/Account/fields/Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Parts_Ordered__c</fullName>
    <label>UK Based or import legislation affected?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>