objects/Account/fields/Permit_Required__c.field-meta.xml
<CustomField>
    <fullName>Permit_Required__c</fullName>
    <label>Permit Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>