objects/Account/fields/Postcode_Area__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Area__c</fullName>
    <label>Postcode Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>