objects/Account/fields/Postecode_Location__c.field-meta.xml
<CustomField>
    <fullName>Postecode_Location__c</fullName>
    <label>Postecode Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>