objects/Account/fields/Previous_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales__c</fullName>
    <label>Accredited and certificate supplied ?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>