objects/Account/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <formula>CASE(Price_Book_Indicator__c,&quot;Standard Price Book&quot;,&quot;01s58000001myJJ&quot;,&quot;Standard Price Book2&quot;,&quot;01s4E0000004WiQ&quot;,&quot;test&quot;,&quot;01s4E0000004WiV&quot;,&quot;&quot;,Parent_Price_Book_ID__c  ,Price_Book_Indicator__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book ID</label>
    <type>Text</type>
</CustomField>