objects/Account/fields/Price_Book_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Indicator__c</fullName>
    <inlineHelpText>In this field, either place the name of an existing price book from 2012, or the ID of a new one beyond that.</inlineHelpText>
    <label>Price Book Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>