objects/Account/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <label>Price Book Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>