objects/Account/fields/Price_List_Correct__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Correct__c</fullName>
    <inlineHelpText>This is the date on which the pricing level for this customer was last checked.</inlineHelpText>
    <label>Price List Correct</label>
    <type>Date</type>
</CustomField>