objects/Account/fields/Primary_Contact_HS__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_HS__c</fullName>
    <label>Primary Contact HS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>