objects/Account/fields/Purchase_Order_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Expiry_Date__c</fullName>
    <label>Purchase Order Expiry Date</label>
    <type>Date</type>
</CustomField>