objects/Account/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <inlineHelpText>If you select this on the parent, it over-rides every Site and Every Contract. If you select it for a site, it over-rides the contracts. Contracts can be set specifically.</inlineHelpText>
    <label>Purchase Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>