objects/Account/fields/Reason_Dormant_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_Dormant_On_Hold__c</fullName>
    <label>Account Status Reason</label>
    <type>TextArea</type>
</CustomField>