objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BN Zone D</fullName>
            </value>
            <value>
                <fullName>BR Zone B</fullName>
            </value>
            <value>
                <fullName>Central London (E,EC,WC,W)</fullName>
            </value>
            <value>
                <fullName>CM Zone C</fullName>
            </value>
            <value>
                <fullName>CR Zone C</fullName>
            </value>
            <value>
                <fullName>CT Zone C</fullName>
            </value>
            <value>
                <fullName>CN Zone D</fullName>
            </value>
            <value>
                <fullName>DA Zone A</fullName>
            </value>
            <value>
                <fullName>E Zone C</fullName>
            </value>
            <value>
                <fullName>GU Zone D</fullName>
            </value>
            <value>
                <fullName>HA Zone D</fullName>
            </value>
            <value>
                <fullName>HP Zone D</fullName>
            </value>
            <value>
                <fullName>IG Zone C</fullName>
            </value>
            <value>
                <fullName>KT Zone C</fullName>
            </value>
            <value>
                <fullName>ME Zone B</fullName>
            </value>
            <value>
                <fullName>MK Zone D</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PO Zone E</fullName>
            </value>
            <value>
                <fullName>RG Zone D</fullName>
            </value>
            <value>
                <fullName>RH Zone C</fullName>
            </value>
            <value>
                <fullName>RM Zone B</fullName>
            </value>
            <value>
                <fullName>SE Zone C</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>SL Zone D</fullName>
            </value>
            <value>
                <fullName>SM Zone C</fullName>
            </value>
            <value>
                <fullName>SO Zone D</fullName>
            </value>
            <value>
                <fullName>S- Scotland</fullName>
            </value>
            <value>
                <fullName>SS Zone C</fullName>
            </value>
            <value>
                <fullName>SW Zone C&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>