objects/Account/fields/Resend_Service_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Resend_Service_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend Service Sheet</label>
    <type>Checkbox</type>
</CustomField>