objects/Account/fields/SAGE_Code__c.field-meta.xml
<CustomField>
    <fullName>SAGE_Code__c</fullName>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>