objects/Account/fields/SAGE_Code_for_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>SAGE_Code_for_Invoicing__c</fullName>
    <label>SAGE Code for Invoicing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>