objects/Account/fields/Sale_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Sale_Initiated__c</fullName>
    <label>Sale Initiated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Marketing call</fullName>
            </value>
            <value>
                <fullName>Customer enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>