objects/Account/fields/scheduled_service_due_dates__c.field-meta.xml
<CustomField>
    <fullName>scheduled_service_due_dates__c</fullName>
    <label>Scheduled Service Due Dates</label>
    <type>Date</type>
</CustomField>