objects/Account/fields/Send_Booking_Confirmation_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Booking_Confirmation_Emails__c</fullName>
    <label>Send Booking Confirmation Emails?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>