objects/Account/fields/Service_Department__c.field-meta.xml
<CustomField>
    <fullName>Service_Department__c</fullName>
    <description>Auto Populate the Service Department based on the Postcode area values.</description>
    <inlineHelpText>Auto Populate the Service Department based on the Postcode area values.</inlineHelpText>
    <label>Service Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service North</fullName>
            </value>
            <value>
                <fullName>Service Middle North</fullName>
            </value>
            <value>
                <fullName>Service Southwest</fullName>
            </value>
            <value>
                <fullName>Service Southeast</fullName>
            </value>
            <value>
                <fullName>Error Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>