objects/Account/fields/Service_History__c.field-meta.xml
<CustomField>
    <fullName>Service_History__c</fullName>
    <label>Payment terms (days)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>