objects/Account/fields/Set_to_Dormant_on_this_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_to_Dormant_on_this_Date__c</fullName>
    <label>Set to Dormant on this Date</label>
    <type>Date</type>
</CustomField>