objects/Account/fields/Shopping_Centre_Details__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Centre_Details__c</fullName>
    <inlineHelpText>This is for anyone in a shopping centre</inlineHelpText>
    <label>Shopping Centre Details</label>
    <type>TextArea</type>
</CustomField>