objects/Account/fields/Site_Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Site_Additional_Instructions__c</fullName>
    <description>Site Additional Instructions</description>
    <inlineHelpText>Site Additional Instructions</inlineHelpText>
    <label>Site Additional Instructions</label>
    <type>TextArea</type>
</CustomField>