objects/Account/fields/Site_Induction__c.field-meta.xml
<CustomField>
    <fullName>Site_Induction__c</fullName>
    <inlineHelpText>If you fill anything in this field, it will notify in booking status to the scheduler.</inlineHelpText>
    <label>Site Induction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>