objects/Account/fields/Site_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Invoice_Name__c</fullName>
    <inlineHelpText>This is the name of the site as it will be shown on the invoice, replacing record name in the Site Invoice address.</inlineHelpText>
    <label>Site Invoice Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>