objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <inlineHelpText>This relates to the contracted agreement for Callout Reponse times</inlineHelpText>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 hour</fullName>
            </value>
            <value>
                <fullName>2 hour</fullName>
            </value>
            <value>
                <fullName>3 hour</fullName>
            </value>
            <value>
                <fullName>8 hour</fullName>
            </value>
            <value>
                <fullName>24 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>