objects/Account/fields/Special_Engineer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Engineer_Instructions__c</fullName>
    <inlineHelpText>Customer / Site Specific Special Instructions that appear on the Visits in the Message section.</inlineHelpText>
    <label>Special Technician Instructions</label>
    <type>TextArea</type>
</CustomField>