objects/Account/fields/Spend_Limit__c.field-meta.xml
<CustomField>
    <fullName>Spend_Limit__c</fullName>
    <label>Spend Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>