objects/Account/fields/State_Split__c.field-meta.xml
<CustomField>
    <fullName>State_Split__c</fullName>
    <formula>if(Isnumber(right(LEFT(UPRN__c, 2),1)),LEFT(UPRN__c, 1), LEFT(UPRN__c, 2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Split</label>
    <type>Text</type>
</CustomField>