objects/Account/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <label>Products/Service supplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>