objects/Account/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>builder</fullName>
            </value>
            <value>
                <fullName>enginner</fullName>
            </value>
            <value>
                <fullName>equipment manufactuer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>