objects/Account/fields/Survey_Count_HS__c.field-meta.xml
<CustomField>
    <fullName>Survey_Count_HS__c</fullName>
    <label>Survey Count HS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>