objects/Account/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <label>Survey Mail Sent On</label>
    <type>Date</type>
</CustomField>