objects/Account/fields/Survey_Duration__c.field-meta.xml
<CustomField>
    <fullName>Survey_Duration__c</fullName>
    <inlineHelpText>Enter the survey duration in No. of Days</inlineHelpText>
    <label>Survey Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>