objects/Account/fields/Survey_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Survey_Engineer__c</fullName>
    <label>Survey Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>