objects/Account/fields/Survey_Required__c.field-meta.xml
<CustomField>
    <fullName>Survey_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this if you need survey from this site.</inlineHelpText>
    <label>Survey Required</label>
    <type>Checkbox</type>
</CustomField>