objects/Account/fields/Survey_Visit_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Visit_Id__c</fullName>
    <label>Survey Visit Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>