objects/Account/fields/Test_Certificate_to_HQ_email__c.field-meta.xml
<CustomField>
    <fullName>Test_Certificate_to_HQ_email__c</fullName>
    <label>HQ Certification Email To</label>
    <type>Email</type>
</CustomField>