objects/Account/fields/TEST_Service_Contact__c.field-meta.xml
<CustomField>
    <fullName>TEST_Service_Contact__c</fullName>
    <label>Service Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>