objects/Account/fields/This_Site_has_Group_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>This_Site_has_Group_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is ticked, then no invoice will be sent when the opportunity is saved. These will be manually invoiced - ie the salesforce process will stop with an approved invoice and we assume that the rest of the process is handled manually.</inlineHelpText>
    <label>Manual Invoicing</label>
    <type>Checkbox</type>
</CustomField>