objects/Account/fields/Total_No_of_CCTV_Monitors__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_CCTV_Monitors__c</fullName>
    <formula>CCTV_O_C_Zone_Monitoring__c + CCTV_S_C_Zone_Monitoring_Qty__c + O_C_Sounder_Monitoring_Qty__c + CCTV_Mains_Monitoring_Qty__c + CCTV_SLA_Monitoring_Qty__c +  CCTV_Loop_Monitoring_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of CCTV Monitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>