objects/Account/fields/Total_No_of_FA_Monitors__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_FA_Monitors__c</fullName>
    <formula>FA_O_C_Zone_Monitoring_qty__c + FA_S_C_Zone_Monitoring_qty__c+  FA_O_C_Sounder_Monitoring_qty__c + FA_S_C_Sounder_Monitoring_Qty__c +  FA_O_C_Antenna_Monitoring_Qty__c +  FA_S_C_Antenna_Monitoring_Qty__c +  FA_Mains_Monitoring_Qty__c +  FA_SLA_Monitoring_Qty__c +  FA_Loop_Monitoring_Qty__c +  FA_Smoke_Detector_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No. of FA Monitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>