objects/Account/fields/UK_Related__c.field-meta.xml
<CustomField>
    <fullName>UK_Related__c</fullName>
    <inlineHelpText>If this is offshore, ie not on the UK mainland, then this must be set to Yes</inlineHelpText>
    <label>UK Related</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>