objects/Account/fields/UPRN__c.field-meta.xml
<CustomField>
    <fullName>UPRN__c</fullName>
    <label>Account Ref.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>