objects/Account/fields/Vat_Number__c.field-meta.xml
<CustomField>
    <fullName>Vat_Number__c</fullName>
    <label>Vat Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>