objects/Account/fields/View_Group__c.field-meta.xml
<CustomField>
    <fullName>View_Group__c</fullName>
    <inlineHelpText>Enter name of Group that this Site or Customer is part of, e.g Bank. This information can then be used easily when creating a Group view.</inlineHelpText>
    <label>View Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>