objects/Account/fields/View_SuperGroup__c.field-meta.xml
<CustomField>
    <fullName>View_SuperGroup__c</fullName>
    <inlineHelpText>Enter the name of the Super Group this Site/Customer is part of, e.g JD. This will enable anyone to easily create a Super Group view.</inlineHelpText>
    <label>View SuperGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>