objects/Account/fields/Visit_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Visit_Confirmation_Email__c</fullName>
    <label>Visit Confirmation Email</label>
    <type>Email</type>
</CustomField>