objects/Account/fields/Visit_Confirmation_Email_to__c.field-meta.xml
<CustomField>
    <fullName>Visit_Confirmation_Email_to__c</fullName>
    <label>Certification Email To</label>
    <type>Email</type>
</CustomField>