objects/Account/fields/Visit_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reschedule__c</fullName>
    <inlineHelpText>On Schedule = When visit completes, new visit is planned based on Month Due field.
On Visit = When visit completes, new visit is planned based on visit date.
Pre-Scheduled = User has scheduled all visits so no revisit is booked. Service Maintains these.</inlineHelpText>
    <label>Visit Rescheduling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Schedule</fullName>
            </value>
            <value>
                <fullName>On Visit</fullName>
            </value>
            <value>
                <fullName>Pre-Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>