objects/Account/fields/X3L_AFFF__c.field-meta.xml
<CustomField>
    <fullName>X3L_AFFF__c</fullName>
    <label>3L AFFF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>