objects/Account/fields/XeroId__c.field-meta.xml
<CustomField>
    <fullName>XeroId__c</fullName>
    <label>XeroId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>